nav z-index fixed
plus burger-menu animation tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -543,8 +543,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
+.relative {
+  position: relative;
 }
 
 .top-0 {
@@ -939,17 +939,17 @@ h1, h2, h3, h4, h5, h6 {
 
 /* NAV SCROLL BEHAVIOUR */
 
-.scroll-down nav{
+.scroll-down header{
   transform: translate3d(0, -100%, 0);
 }
 
-.scroll-up nav{
+.scroll-up header{
 }
 
 /* BURGER MENU */
 
 .burger-bar-top-anim{
-  transform: rotate3d(0, 0, 45, 45deg) translateX(5px) translateY(5.5px);
+  transform: translateY(8px) rotate3d(0, 0, 45, 45deg);
 }
 
 .burger-bar-mid-anim{
@@ -957,7 +957,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .burger-bar-bot-anim{
-  transform: rotate3d(0, 0, 45, -45deg) translateX(5px) translateY(-7px);
+  transform: translateY(-8px) rotate3d(0, 0, 45, -45deg);
 }
 
 .dropdown-anim{
@@ -1031,10 +1031,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .sm\:w-auto {
     width: auto;
-  }
-
-  .sm\:w-\[570px\] {
-    width: 570px;
   }
 
   .sm\:max-w-\[324px\] {
